--- a/app/templates/emel-calendar.html
+++ b/app/templates/emel-calendar.html
@@ -103,15 +103,15 @@
                 </div>
                 </div>
 
-                                      <!-- Mens' Haircut -->
+                                      <!-- Service Selected -->
               <div class="group relative w-[350px] h-[85px] bg-white border-black border-[6px] p-2 rounded-[15px] flex items-center overflow-hidden mt-2 mb-2">
-                <img src="{{ url_for('static', filename ='icons/erazor.png') }}" 
-                    alt="Beard Service" 
+                <img src="{{ url_for('static', filename=service.icon) }}"
+                    alt="{{ service.name }}"
                     class="w-[45px] h-[45px] object-contain ml-3 ">
                 <div class="w-[2px] h-full bg-black mx-4 "></div>
                 <div class="relative flex flex-col leading-tight ">
-                  <span class="text-xl font-faustina text-black font-bold mb-[-6px]">Men's Haircut</span>
-                  <span class="text-base font-faustina text-black font-normal">₱ 250.00</span>
+                  <span class="text-xl font-faustina text-black font-bold mb-[-6px]">{{ service.name }}</span>
+                  <span class="text-base font-faustina text-black font-normal">₱ {{ service.price }}</span>
                 </div>
               </div>
 
