--- a/app/templates/receipt.html
+++ b/app/templates/receipt.html
@@ -33,6 +33,10 @@
                 <span class="font-semibold">Barber:</span>
                 <span id="barberName">Emel Calomos</span>
             </div>
+            <div class="flex flex-col items-center mb-2">
+                <span class="text-3xl font-semibold">9:00 AM</span>
+                <span id="barberName" class="text-xl font-normal">Tuesday, August 19, 2025</span>
+            </div>
         </div>
 
         <div class="text-center mt-4">
