--- a/app/templates/barber.html
+++ b/app/templates/barber.html
@@ -76,7 +76,7 @@
 
     <!-- Appointment Section (Right) -->
     <div class="bg-black text-white md:w-auto md:h-auto p-6 rounded-xl shadow-md border-2 border-white">
-        <h2 class="text-lg font-normal mb-4">Selected appointment details:</h2>
+        <h2 class="text-lg font-normal mb-4">Schedule Information:</h2>
  
 
 
