--- a/app/templates/boboy-services.html
+++ b/app/templates/boboy-services.html
@@ -22,7 +22,7 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 justify-items-center"></div>
 
               <!-- Beard Service -->
-               <a href="{{ url_for('routes.select_service', service_name='beard') }}">
+               <a href="{{ url_for('routes.select_service',barber='Angelo Paballa', service_name='beard') }}">
               <div class="group relative w-[350px] h-[85px] bg-white border-black border-[6px] p-2 rounded-[15px] flex items-center overflow-hidden">
                 <img src="{{ url_for('static', filename ='icons/beard.png') }}" 
                     alt="Beard Service" 
@@ -43,7 +43,7 @@
 
 
               <!-- Mens' Haircut -->
-               <a href="{{ url_for('routes.select_service', service_name='haircut') }}">
+               <a href="{{ url_for('routes.select_service',barber='Angelo Paballa', service_name='haircut') }}">
               <div class="group relative w-[350px] h-[85px] bg-white border-black border-[6px] p-2 rounded-[15px] flex items-center overflow-hidden">
                 <img src="{{ url_for('static', filename ='icons/erazor.png') }}" 
                     alt="Beard Service" 
@@ -62,7 +62,7 @@
               </a>
 
               <!-- Home Service -->
-               <a href="{{ url_for('routes.select_service', service_name='home') }}">
+               <a href="{{ url_for('routes.select_service',barber='Angelo Paballa', service_name='home') }}">
               <div class="group relative w-[350px] h-[85px] bg-white border-black border-[6px] p-2 rounded-[15px] flex items-center overflow-hidden">
                 <img src="{{ url_for('static', filename ='icons/home.png') }}" 
                     alt="Beard Service" 
@@ -81,7 +81,7 @@
               </a>
 
               <!-- Full Service -->
-               <a href="{{ url_for('routes.select_service', service_name='full') }}">
+               <a href="{{ url_for('routes.select_service',barber='Angelo Paballa', service_name='full') }}">
               <div class="group relative w-[350px] h-[85px] bg-white border-black border-[6px] p-2 rounded-[15px] flex items-center overflow-hidden">
                 <img src="{{ url_for('static', filename ='icons/chair.png') }}" 
                     alt="Beard Service" 
@@ -100,7 +100,7 @@
               </a>
 
               <!-- Full Shave -->
-               <a href="{{ url_for('routes.select_service', service_name='shave') }}">
+               <a href="{{ url_for('routes.select_service', barber='Angelo Paballa', service_name='shave') }}">
               <div class="group relative w-[350px] h-[85px] bg-white border-black border-[6px] p-2 rounded-[15px] flex items-center overflow-hidden">
                 <img src="{{ url_for('static', filename ='icons/razor.png') }}" 
                     alt="Beard Service" 
@@ -122,7 +122,7 @@
 
     <!-- Appointment Section (Right) -->
     <div class="bg-black text-white md:w-auto md:h-auto p-6 rounded-xl shadow-md border-2 border-white">
-        <h2 class="text-lg font-normal mb-4">Selected appointment details:</h2>
+        <h2 class="text-lg font-normal mb-4">Schedule Information:</h2>
 
               <div class="flex justify-center">
                 <div class="relative h-[200px] w-[180px] bg-black rounded-[25px] border-4 border-white">
