--- a/app/templates/sections/appointment.html
+++ b/app/templates/sections/appointment.html
@@ -17,7 +17,7 @@
 
 <div class="flex justify-center items-center flex-col space-y-10 m-15">
     <div id="bookNowContainer" class="w-100 h-auto bg-black rounded-[20px]">
-        <div href="{{ url_for('static', filename='routes.LOGIN') }}" class="text-6xl text-white flex items-center justify-center font-faustina text-center m-10">
+        <div class="text-6xl text-white flex items-center justify-center font-faustina text-center m-10">
             <a href="{{ url_for('routes.login') }}">
                 Book Now
             </a>
