--- a/app/templates/sections/navbar.html
+++ b/app/templates/sections/navbar.html
@@ -1,8 +1,10 @@
 <div class="h-[75px] bg-black flex justify-between items-center">
     <div class="ml-[40px]">
+      <a href="{{ url_for('admin.ADMINLOGIN') }}">
         <img src="{{ url_for('static', filename='images/SG-LOGO.jpg') }}" 
              alt="Logo" 
              class="w-[75px] h-[75px] object-cover" />
+        </a>
     </div>
 
     <nav class="flex gap-[25px] mr-[40px] font-playfair text-[15px] text-white">
