--- a/app/templates/receipt.html
+++ b/app/templates/receipt.html
@@ -39,11 +39,13 @@
             </div>
         </div>
 
-        <div class="text-center mt-4">
-            <span class="text-sm text-gray-500">Thank you for booking your appointment with us!</span>
+        <div class="text-center mb-2">
+            <span class="text-sm text-gray-500">Thank you for booking your appointment with us!</span></br>
+            <span class="text-sm text-gray-500">For verification, please provide this receipt to your barber.</span>
         </div>
-
+        <a href="{{url_for('routes.HOME')}}">
         <img src="{{ url_for('static', filename='images/Slick.jpg') }}" alt="Slick Grind Barber logo" class="w-17 h-12 mx-auto mt-1 rounded-[2px]" />
+        </a>
     </div>
 
 </body>
