--- a/app/templates/admin/emel-dashboard_home.html
+++ b/app/templates/admin/emel-dashboard_home.html
@@ -52,6 +52,22 @@
         .appointment-card:hover {
             box-shadow: 0 4px 16px rgba(0,0,0,0.15);
         }
+        .appointment-badge {
+            position: absolute;
+            bottom: 4px;
+            right: 4px;
+            display: flex;
+            align-items: center;
+            gap: 4px;
+            font-size: 20px; 
+            color: black;
+        }
+        .appointment-line {
+            border-radius: 55px;
+            width: 4px;
+            height: 50px;
+            background-color: rgb(192, 1, 1);
+        }
     </style>
 </head>
 <body class="bg-gray-800">
@@ -62,6 +78,9 @@
                 <div>
                     <h1 class="text-3xl font-bold">Emel's Dashboard</h1>
                 </div>
+                <a href="{{ url_for('admin.logout') }}" class="btn btn-danger">
+                    Log out
+                </a>
             </div>
         </div>
     </header>
