--- a/app/templates/receipt.html
+++ b/app/templates/receipt.html
@@ -35,7 +35,7 @@
             </div>
             <div class="flex flex-col items-center mb-2">
                 <span class="text-3xl font-semibold">{{ time }}</span>
-                <span id="barberName" class="text-xl font-normal">{{ date }}5</span>
+                <span id="barberName" class="text-xl font-normal">{{ date }}</span>
             </div>
         </div>
 
