--- a/app/templates/sections/appointment.html
+++ b/app/templates/sections/appointment.html
@@ -18,7 +18,7 @@
 <div class="flex justify-center items-center flex-col space-y-10 m-15">
     <div id="bookNowContainer" class="w-100 h-auto bg-black rounded-[20px]">
         <div class="text-6xl text-white flex items-center justify-center font-faustina text-center m-10">
-            <a href="{{ url_for('routes.login') }}">
+            <a href="{{ url_for('routes.LOGIN') }}">
                 Book Now
             </a>
         </div>
